# paste.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Procfile  Rocket.toml  package.json
app/: .eslintrc  README.md  package.json
app/config/: paths.js  setupTests.js  webpack.config.dev.js  webpack.config.prod.js  webpackDevServer.config.js
app/src/: App.js  App.jsx  index.js  mockFetch.js
app/src/pages/: Home.jsx  Home.test.jsx  ViewPaste.jsx  ViewPaste.test.jsx
migrations/2018-09-16-145017_create_pastes/: down.sql  up.sql
migrations/2018-09-17-225614_insert_hashids/: down.sql  up.sql
migrations/2018-09-26-130254_remove_pg_hashids/: down.sql  up.sql
migrations/2018-09-26-135049_remove_not_null_on_hash/: down.sql  up.sql
src/: macros.rs  main.rs  paste_id.rs  tests.rs
src/api/: mod.rs
src/app/: mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/database/actions/: mod.rs  pastes.rs
src/web/: mod.rs
web/: package.json
web/config/: paths.js
