[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket"}
rand = "0.5.5"
diesel = { version = "1.0.0", features=["postgres"]}
dotenv = "0.9.0"
hashids = {git = "https://github.com/charsyam/hashids_rust.git", version = "1.0.0"}